--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -36,6 +36,10 @@
     <%= f.text_field :category_id %>
   </div>
   <div class="field">
+    <%= f.label :tags %><br />
+    <%= f.text_field :tags %>
+  </div>
+	<div class="field">
     <%= f.label :published %><br />
     <%= f.check_box :published %>
   </div>
