Projects with screenshots.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,14 @@
 </head>
 <body>
 
-<%= yield %>
+<header>
+  <h1>Davi Ferreira</h1>
+  <h2><small>Nem ninja, nem rockstar.</small> Programador.</h2>
+</header>
+
+<section id="main">
+  <%= yield %>
+</section>
 
 </body>
 </html>
