--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@project) do |f| %>
+<%= form_for(@project, :html => { :multipart => true }) do |f| %>
   <% if @project.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h2>
@@ -43,6 +43,12 @@
     <%= f.label :published %><br />
     <%= f.check_box :published %>
   </div>
+  
+  <div class="field">
+    <%= f.label :screenshot %><br />
+    <%= f.file_field :screenshot %>
+  </div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
