--- a/public/stylesheets/daviferreira.css
+++ b/public/stylesheets/daviferreira.css
@@ -61,10 +61,14 @@ body{
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-header, section#main{
+header, section#main, div#blog-container, nav#menu{
   width:940px;
   margin:0 auto;
-  padding:10px;
+  padding:20px;
+}
+
+nav#menu{
+  padding:20px 20px 0 20px;
 }
 
 header h1{
@@ -77,19 +81,29 @@ header h1{
 header h2{
   font-size:20px;
   text-shadow: #f5f5f5 -1px -1px 0;
+  letter-spacing:-1.3px;
 }
 
 header h2 small{
   color:#b2b2a3;
 }
 
-h2.section{
-  margin:0 0 10px 0;
+header div#search{
+  float:right;
+  margin-top:25px;
+}
+
+div.section-title{
+  margin:0 0;
   background-color:#f5f5f5;
   border:1px solid #fff;
   padding:6px;
+}
+
+div.section-title h2{
   color:#000;
-  text-shadow: #fff 1px 1px 0;
+  text-shadow: #f5f5f5 1px 1px 0;
+  display:inline;
 }
 
 .round-small{
@@ -104,7 +118,7 @@ h2.section{
   box-shadow: 0px 0px 6px #ccc;
 }
 
-ul#projects-main li{
+ul#projects-main li.project{
   width:218px;
   background-color:#f5f5f5;
   border:1px solid #fff;
@@ -112,21 +126,81 @@ ul#projects-main li{
   margin:0 20px 20px 0;
 }
 
+ul#projects-main li.project div.actions{
+  border-top:1px #ccc dotted;
+}
+
+ul#projects-main li.project div.actions a{
+  text-decoration:none;
+  font-size:10px;
+  color:#666;
+}
+
+ul#projects-main li.project p.tags{
+  line-height:18px;
+}
+
+ul#projects-main li.project p.tags a{
+  float:left;
+  margin:0 6px 0 0;
+  color:#E64F00;
+  text-decoration:none;
+  font-weight:900;
+  border-bottom:1px solid #fff;
+}
+
+ul#projects-main li.project p.tags a.category{
+  color:#333;
+  border-bottom:1px dotted #333;
+}
+
+ul#projects-main li.project div.actions ul{
+  float:right;
+}
+
+ul#projects-main li.project div.actions ul li{
+  float:left;
+}
+
+ul#projects-main li.project p.time-ago{
+  font-size:10px;
+  text-transform:uppercase;
+  background-color:#f5f5f5;
+  padding:2px;
+  color:#666;
+  text-align:center;
+  text-shadow: #fff -1px -1px 0;
+  letter-spacing:-0.3px;
+}
+
 ul#projects-main li.first, ul#projects-main li.last{
   margin:0 0 20px 0;
 }
 
-div.project-container{
+div.project-container, div.section-title span{
   margin:6px;
   background-color:#fff;
-  min-height:300px;
   padding:6px;
 }
 
+div.section-title span{
+  margin:0 0;
+  display:block;
+}
+
 ul#projects-main li div.screenshot{
-  padding:3px;
+  padding:2px 3px 2px 3px;
   background-color:#fff;
   border:1px solid #f5f5f5;
+}
+
+ul#projects-main li p{
+  font-size:12px;
+  margin:6px 0 6px 0;
+  color:#555;
+  line-height:15px;
+  text-align:left;
+  padding:6px;
 }
 
 ul#projects-main li div.screenshot img{
@@ -135,9 +209,179 @@ ul#projects-main li div.screenshot img{
 
 ul#projects-main li h3{
   color:#b2b2a4;
-  margin:3px 0 3px 0;
+  margin:6px 0 3px 0;
   letter-spacing:-1.2px;
   font-size:22px;
-  text-align:center;
   text-shadow: #f5f5f5 -1px -1px 0;
+  padding:6px;
+}
+
+div.pagination{
+  clear:both;
+  text-align:center;
+}
+
+section#blog{
+  border-top:1px #fff solid;
+  background-color:#7d7d71;
+}
+
+div#blog-container h2{
+  color:#f2f2f2;
+  text-shadow: #666 -1px -1px 0;
+  padding:0 12px 12px 12px;
+  font-size:32px;
+}
+
+nav#menu ul{
+  float:right;
+}
+
+nav#menu ul li{
+  float:left;
+  margin:0 12px 0 0;
+}
+
+nav#menu ul li.last{
+  margin:0 0;
+}
+
+nav#menu ul li a{
+  color:#98CB66;
+  text-decoration:none;
+  font-weight:900;
+  border-bottom:1px dotted #ccc;
+  font-size:14px;
+}
+
+div.pagination a, div.pagination span.current{
+  display:inline-block;
+  text-indent:-9000px;
+  width:10px;
+  height:11px;  
+}
+div.pagination span.current{
+  background:url(/images/pagination.png) -10px 0 no-repeat;
+}
+
+div.pagination a{
+  background:url(/images/pagination.png) 0 0 no-repeat;
+}
+
+header div#search input#fld-search {
+  border:1px solid #ccc;
+  width:270px;
+  -webkit-border-top-left-radius:3px;
+  -webkit-border-bottom-left-radius:3px;
+  -moz-border-radius-topleft:3px;
+  -moz-border-radius-bottomleft:3px;
+  border-top-left-radius:3px;
+  border-bottom-left-radius:3px;
+  -webkit-border-top-right-radius:0!important;
+  -webkit-border-bottom-right-radius:0!important;
+  -moz-border-radius-topright:0!important;
+  -moz-border-radius-bottomright:0!important;
+  border-top-right-radius:0!important;
+  border-bottom-right-radius:0!important;
+  padding:6px;
+  -webkit-box-shadow: inset 0px 0px 4px #ccc;
+  -moz-box-shadow: inset 0px 0px 4px #ccc;
+  box-shadow: inset 0px 0px 4px #ccc;
+}
+
+header div#search input#fld-search:focus{
+  border-color:#98CB66;
+  color:#98CB66;
+  box-shadow:none;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+}
+
+header div#search input#btn-search {
+  color:#fff;
+  font-weight:900;
+  background:#98CB66;
+  border:none;
+  width:28px;
+  -webkit-border-top-right-radius:3px;
+  -webkit-border-bottom-right-radius:3px;
+  -moz-border-radius-topright:3px;
+  -moz-border-radius-bottomright:3px;
+  border-top-right-radius:3px;
+  border-bottom-right-radius:3px;
+  -webkit-border-top-left-radius:0!important;
+  -webkit-border-bottom-left-radius:0!important;
+  -moz-border-radius-topleft:0!important;
+  -moz-border-radius-bottomleft:0!important;
+  border-top-left-radius:0!important;
+  border-bottom-left-radius:0!important;
+  cursor:pointer;
+  padding:6px;
+  -webkit-box-shadow: inset 0px 0px 4px #666;
+  -moz-box-shadow: inset 0px 0px 4px #666;
+  box-shadow: inset 0px 0px 4px #666;
+}
+
+header div#search input#btn-search:hover {
+  background:#E64F00;
+}
+
+ul#blog-posts{
+  margin:0 12px 0 12px;
+}
+
+ul#blog-posts li{
+  color:#333;
+  border-bottom:1px solid #333;
+  padding:20px 0 20px 0;
+  border-top:1px solid #999;
+}
+
+ul#blog-posts li.first{
+  border-top:none;
+  margin:0 0;
+}
+
+ul#blog-posts li.last{
+  border-bottom:none;
+  margin:0 0;
+}
+
+ul#blog-posts li h3{
+  color:#98CB66;
+  text-shadow: #666 -1px -1px 0;
+  font-size:22px;
+}
+
+ul#blog-posts li p.time-ago{
+  font-size:11px;
+  margin:3px 0 3px 0;
+  padding:3px 0 3px 0;
+}
+
+ul#blog-posts li p.abstract{
+  color:#ccc;
+  line-height:20px;
+  font-size:12px;
+
+}
+
+/* Misc/Util
+-------------------------------------------------------------- */
+
+.clearfix:after                 { visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; }
+* html .clearfix                { zoom: 1; } /* IE6 */
+*:first-child+html .clearfix    { zoom: 1; } /* IE7 */
+
+.field_with_errors{
+  display:inline;
+}
+
+.field_with_errors label {
+  background-color:red!important;
+  color: #fff!important;
+}
+
+span.prev_page, a.prev_page, span.next_page, a.next_page {
+  display: none !important;
 }
