--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,41 +8,63 @@
 </head>
 <body>
 
-<header>
-  <div id="search">
-    <form action="/search" method="GET">
-      <input type="text" name="search" id="fld-search" placeholder="Pesquisar..." /><input type="submit" value="OK" id="btn-search" />
-    </form>
-  </div>
-  <h1>Davi Ferreira</h1>
-  <h2><small>Nem ninja, nem rockstar.</small> Programador.</h2>
-</header>
-
-<nav id="menu">
-  <div class="section-title round-small shadow">
-    <span class="clearfix">
-      <ul class="clearfix">
-        <li><a href="#blog">Blog</a></li>
-        <li class="lest"><a href="#contato">Contato</a></li>
-      </ul>
-      <form method="POST" action="" data-remote="true">
-        <h2>Trabalhos</h2>
-        <select name="" id="">
-          <option value="">Todas as categorias</option>
-        </select>
-        <select name="" id="">
-          <option value="">Organizar por mais recentes</option>
-        </select>
+  <header>
+    <div id="search">
+      <form action="<%= projects_path %>" method="GET" id="frm-search">
+        <input type="text" name="search" id="fld-search" placeholder="Pesquisar..." /><input type="submit" value="OK" id="btn-search" />
       </form>
-    </span>
-  </div>
-</nav>
+    </div>
+    <h1>Davi Ferreira</h1>
+    <h2><small>Nem ninja, nem rockstar.</small> Programador.</h2>
+  </header>
 
-<section id="main">
-  <%= yield %>
-</section>
+  <nav id="menu">
+    <div class="section-title round-small shadow">
+      <span class="clearfix">
+        <ul class="clearfix">
+          <li><a href="#blog">Blog</a></li>
+          <li class="last"><a href="#contact">Contato</a></li>
+        </ul>
+        <h2>Trabalhos</h2>
+        <div id="filters" class="clearfix">
+          <div class="select round-small shadow"><a class="title" href="#all-categories"><span>&darr;</span>Todas as categorias</a></div>
+          <div class="select round-small shadow"><a class="title" href="#recent"><span>&darr;</span>Organizar por mais recentes</a></div>
+        </div>
+      </span>
+    </div>
+  </nav>
 
-<%= render "posts/posts_portfolio" %>
+  <section id="main">
+    <%= yield %>
+  </section>
+
+  <%= render "posts/posts_portfolio" %>
+  
+  <footer>
+    <div id="footer-container" class="clearfix">
+      <section id="contact">
+        <h2>Contato</h2>
+        <form action="">
+        </form>
+      </section>
+    
+      <section id="social" class="last">
+        <h2><a href="#menu" class="lnk-top">&uarr; topo</a>Social</h2>
+        <ul>
+          <li>
+            <a href="http://twitter.com/davitferreira" class="twitter-follow-button" data-button="grey" data-text-color="#FFFFFF" data-link-color="#00AEFF">Follow @davitferreira</a>
+            <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
+          </li>
+          <li>Mais sobre minha vida profissional, visite meu perfil no <%=link_to "Linkedin", "http://br.linkedin.com/in/daviferreira", :rel => "external" %>.</li>
+          <li>Meus projetos open source estão hospedados no <%=link_to "GitHub", "http://www.github.com/daviferreira", :rel => "external" %>.</li>
+          <li>Meus links favoritos você encontra no <%= link_to "Delicious", "http://www.delicious.com/daviferreira", :rel => "external" %>.</li>
+          <li>Alguns trabalhos de criação estão disponíveis no <%= link_to "DeviantArt", "http://daviferreira.deviantart.com", :rel => "external" %>.</li>
+          <li>E pra conferir as músicas que gosto acesse o meu perfil no <%= link_to "Last.fm", "http://www.last.fm/user/davitf", :rel => "external" %>.</li>
+          
+        </ul>
+      </section>
+    </div>
+  </footer>
 
 </body>
 </html>
