--- a/app/views/posts/_posts_portfolio.html.erb
+++ b/app/views/posts/_posts_portfolio.html.erb
@@ -1,14 +1,17 @@
 <section id="blog">
   <div id="blog-container">
-    <h2>Blog</h2>
+    <h2><a href="#menu" class="lnk-top">&uarr; topo</a>Blog</h2>
     <ul id="blog-posts" class="clearfix">
-    <% @posts.each do |post| %>
-      <li<% if @posts.last == post %> class="last"<% elsif @posts.first == post %> class="first"<% end %>>
-        <h3><%= post.title %></h3>
-        <p class="time-ago">Publicado há <%= time_ago_in_words(post.published_date) %> atrás.</p>
-        <p class="abstract"><%= post.abstract %></p>
-      </li>
+    <% unless @posts.nil? or @posts.empty? %>
+      <% @posts.each do |post| %>
+        <li<% if @posts.last == post %> class="last"<% elsif @posts.first == post %> class="first"<% end %>>
+          <h3><%= post.title %></h3>
+          <p class="abstract"><%= link_to post.abstract, post_path(post) %></p>
+          <p class="time-ago">Publicado há <%= time_ago_in_words(post.published_date) %> atrás.</p>
+        </li>
+      <% end %>
     <% end %>
     </ul>
+    <p class="more"><%= link_to raw("Ver todos os artigos &rarr;"), posts_path, :class => "round-small" %></p>
   </div>
 </section>
