--- a/app/views/projects/_projects.html.erb
+++ b/app/views/projects/_projects.html.erb
@@ -5,12 +5,13 @@
       <div class="screenshot round-small"><%= image_tag project.screenshot.url(:thumb), :width => 184, :height => 150, :alt => project.name %></div>
       <h3><%= project.name %></h3>
       <p><%= project.description %></p>
-      <p class="tags clearfix"><%= link_to project.category.name, category_path(project.category), :class => "category" %> <%= tags_as_links(project.tags) %></p>
+      <p class="category">Categoria: <%= link_to project.category.name, "/projects/category/" + project.category.cached_slug %></p>
+      <p class="tags clearfix"><span class="label">Tags:</span> <%= tags_as_links(project.tags) %></p>
       <p class="time-ago round-small">Finalizado há <%= time_ago_in_words(project.due_date) %> atrás.</p>
-      <% unless project.url.nil? %>
+      <% unless project.url.nil? or project.url.empty? %>
       <div class="actions clearfix">
         <ul>
-          <li><%= link_to image_tag('/images/link_to.gif', :width => 12, :height => 6)+" "+project.url.sub('www.', '').slice(7..35), project.url, :rel => "external" %></li>
+          <li><%= link_to image_tag('/images/link_to.gif', :width => 12, :height => 6)+" "+strip_url(project.url), project.url, :rel => "external" %></li>
         </ul>
       </div>
       <% end %>
