--- a/public/stylesheets/daviferreira.css
+++ b/public/stylesheets/daviferreira.css
@@ -118,8 +118,15 @@ div.section-title h2{
   box-shadow: 0px 0px 6px #B2B2A3;
 }
 
+.shadow-dark{
+  -webkit-box-shadow: 0px 0px 3px #000;
+  -moz-box-shadow: 0px 0px 3px #000;
+  box-shadow: 0px 0px 3px #000;
+}
+
+
 ul#projects-main li.project{
-  width:218px;
+  width:298px;
   background-color:#f5f5f5;
   border:1px solid #fff;
   float:left;
@@ -278,21 +285,21 @@ div#blog-container h2{
   font-size:32px;
 }
 
-nav#menu ul{
+nav#menu ul.sections{
   float:right;
   margin:6px 0 0;
 }
 
-nav#menu ul li{
+nav#menu ul.sections li{
   float:left;
   margin:0 12px 0 0;
 }
 
-nav#menu ul li.last{
+nav#menu ul.sections li.last{
   margin:0 0;
 }
 
-nav#menu ul li a{
+nav#menu ul.sections li a{
   color:#98CB66;
   text-decoration:none;
   font-weight:900;
@@ -300,7 +307,7 @@ nav#menu ul li a{
   font-size:14px;
 }
 
-nav#menu ul li a:hover{
+nav#menu ul.sections li a:hover{
   color:#E64F00;
   border-color:#E64F00;
   border-style:solid;
@@ -329,12 +336,12 @@ header div#search input#fld-search {
   -moz-border-radius-bottomleft:3px;
   border-top-left-radius:3px;
   border-bottom-left-radius:3px;
-  -webkit-border-top-right-radius:0!important;
-  -webkit-border-bottom-right-radius:0!important;
-  -moz-border-radius-topright:0!important;
-  -moz-border-radius-bottomright:0!important;
-  border-top-right-radius:0!important;
-  border-bottom-right-radius:0!important;
+  -webkit-border-top-right-radius:0;
+  -webkit-border-bottom-right-radius:0;
+  -moz-border-radius-topright:0;
+  -moz-border-radius-bottomright:0;
+  border-top-right-radius:0;
+  border-bottom-right-radius:0;
   padding:6px;
   -webkit-box-shadow: inset 0px 0px 4px #B2B2A3;
   -moz-box-shadow: inset 0px 0px 4px #B2B2A3;
@@ -361,12 +368,12 @@ header div#search input#btn-search {
   -moz-border-radius-bottomright:3px;
   border-top-right-radius:3px;
   border-bottom-right-radius:3px;
-  -webkit-border-top-left-radius:0!important;
-  -webkit-border-bottom-left-radius:0!important;
-  -moz-border-radius-topleft:0!important;
-  -moz-border-radius-bottomleft:0!important;
-  border-top-left-radius:0!important;
-  border-bottom-left-radius:0!important;
+  -webkit-border-top-left-radius:0;
+  -webkit-border-bottom-left-radius:0;
+  -moz-border-radius-topleft:0;
+  -moz-border-radius-bottomleft:0;
+  border-top-left-radius:0;
+  border-bottom-left-radius:0;
   cursor:pointer;
   padding:6px;
   -webkit-box-shadow: inset 0px 0px 4px #666;
@@ -470,23 +477,83 @@ a.lnk-top{
   text-shadow:none;
 }
 
+div.filter-options{
+  position:absolute;
+  padding:6px;
+  background-color:#000;
+  border:1px solid #666;
+  display:none;
+  width:140px;
+}
+
+div#options-categories{
+  margin:26px 0 0 96px;
+}
+
+div#options-sort{
+  margin:26px 0 0 270px;
+}
+
+div.filter-options ul{
+  margin:0 0 ;
+}
+
+div.filter-options ul li{
+  float:none;
+  padding:3px;
+  margin:3px;
+  border-bottom:1px dotted #666;
+  font-size:13px;
+  font-weight:300;
+  text-align:center;
+}
+
+div.filter-options ul li.last{
+  border:none;
+}
+
+div.filter-options ul li a{
+  text-decoration:none;
+  color:#98CB66;
+}
+
+div.filter-options ul li a:hover{
+  color:#f5f5f5;
+}
+
 div.select{
   float:left;
   border:1px solid #B2B2A3;
   height:12px;
-  font-size:11px;
+  font-size:12px;
   padding:6px;
   margin:0 12px 0 8px;
-  font-weight:900;
+  font-weight:400;
+  letter-spacing:-0.2px;
   -webkit-box-shadow: inset 0px 0px 2px #B2B2A3;
   -moz-box-shadow: inset 0px 0px 2px #B2B2A3;
   box-shadow: inset 0px 0px 2px #B2B2A3;
   background-color:#f2f2f2;
+  width:140px;
+}
+
+div.select.active{
+  background-color:#000;
+  border:1px solid #000;
 }
 
 div.select a.title{
-  color:#999;
+  color:#98CB66;
   text-decoration:none;
+  display:block;
+}
+
+div.select.active a.title{
+  color:#98CB66;
+}
+
+div.select.active span{
+  color:#98CB66;
 }
 
 div.select span{
@@ -531,8 +598,8 @@ section#social li{
 }
 
 .field_with_errors label {
-  background-color:red!important;
-  color: #fff!important;
+  background-color:red;
+  color: #fff;
 }
 
 span.prev_page, a.prev_page, span.next_page, a.next_page {
