--- a/app/views/projects/_projects.html.erb
+++ b/app/views/projects/_projects.html.erb
@@ -1,24 +1,23 @@
-<ul id="projects-main" class="clearfix">
-<% @projects.each do |project| %>
-  <li class="project round-small shadow <% if ((@projects.index(project)+1) % 3) == 0 %>last<% end %>">
-    <div class="project-container round-small">
-      <div class="screenshot round-small"><%= image_tag project.screenshot.url(:thumb), :width => 266, :height => 166, :alt => project.name %></div>
-      <h3><%= project.name %></h3>
-      <p><%= project.description %></p>
-      <p class="category">Categoria: <%= link_to project.category.name, "/projects/category/" + project.category.cached_slug %></p>
-      <p class="tags clearfix"><span class="label">Tags:</span> <%= tags_as_links(project.tags) %></p>
-      <p class="time-ago round-small">Finalizado há <%= time_ago_in_words(project.due_date) %> atrás.</p>
-      <% unless project.url.nil? or project.url.empty? %>
-      <div class="actions clearfix">
-        <ul>
-          <li><%= link_to image_tag('/images/link_to.gif', :width => 12, :height => 6)+" "+strip_url(project.url), project.url, :rel => "external" %></li>
-        </ul>
+<div class="projects-container">
+  <ul id="projects-main" class="clearfix">
+  <% @projects.each do |project| %>
+    <li class="project round-small shadow <% if ((@projects.index(project)+1) % 3) == 0 %>last<% end %>">
+      <div class="project-container round-small">
+        <div class="screenshot round-small"><%= image_tag project.screenshot.url(:thumb), :width => 266, :height => 166, :alt => project.name %></div>
+        <h3><%= project.name %></h3>
+        <p><%= project.description %></p>
+        <p class="category">Categoria: <%= link_to project.category.name, "/projects/category/" + project.category.cached_slug %></p>
+        <p class="tags clearfix"><span class="label">Tags:</span> <%= tags_as_links(project.tags) %></p>
+        <p class="time-ago round-small">Finalizado há <%= time_ago_in_words(project.due_date) %> atrás.</p>
+        <% unless project.url.nil? or project.url.empty? %>
+        <div class="actions clearfix">
+          <ul>
+            <li><%= link_to image_tag('/images/link_to.gif', :width => 12, :height => 6)+" "+strip_url(project.url), project.url, :rel => "external" %></li>
+          </ul>
+        </div>
+        <% end %>
       </div>
-      <% end %>
-    </div>
-  </li>
-<% end %>
-</ul>
-<div class="pagination">
-  <%= will_paginate @projects %>
+    </li>
+  <% end %>
+  </ul>
 </div>
