--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,9 @@
 <head>
   <title>Portfolio</title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag :all %>
   <%= csrf_meta_tag %>
+  <link rel="shortcut icon" href="/images/favicon.gif" />
 </head>
 <body>
 
@@ -62,7 +63,7 @@
       <section id="contact">
         <h2>Contato</h2>
 
-
+        <%= render "contacts/form" %>
 
       </section>
     
