--- a/app/views/posts/_posts_portfolio.html.erb
+++ b/app/views/posts/_posts_portfolio.html.erb
@@ -7,7 +7,7 @@
         <li<% if @posts.last == post %> class="last"<% elsif @posts.first == post %> class="first"<% end %>>
           <h3><%= post.title %></h3>
           <p class="abstract"><%= link_to post.abstract, post_path(post) %></p>
-          <p class="time-ago">Publicado há <%= time_ago_in_words(post.published_date) %> atrás.</p>
+          <p class="time-ago">Publicado há <%= time_ago_in_words(post.published_date) %>.</p>
         </li>
       <% end %>
     <% end %>
