--- a/public/stylesheets/msgtopo.css
+++ b/public/stylesheets/msgtopo.css
@@ -12,6 +12,7 @@ cursor:pointer;
 -webkit-box-shadow: 0px 0px 12px #000000;
 -moz-box-shadow: 0px 0px 12px #000000;
 box-shadow: 0px 0px 12px #000000; 
+font-size:14px;
 }
 
 div#msg-topo span{display:block;text-align:center;}
