--- a/app/views/posts/_posts_portfolio.html.erb
+++ b/app/views/posts/_posts_portfolio.html.erb
@@ -1,6 +1,6 @@
 <section id="blog">
   <div id="blog-container">
-    <h2><a href="#menu" class="lnk-top">&uarr; topo</a>Blog</h2>
+    <h2><a href="#header" class="lnk-top">&uarr; topo</a>Blog</h2>
     <ul id="blog-posts" class="clearfix">
     <% unless @posts.nil? or @posts.empty? %>
       <% @posts.each do |post| %>
