--- a/public/stylesheets/daviferreira.css
+++ b/public/stylesheets/daviferreira.css
@@ -67,6 +67,10 @@ header, section#main, div#blog-container, nav#menu{
   padding:20px;
 }
 
+div#blog-container{
+  width:960px;
+}
+
 nav#menu{
   padding:20px 20px 0 20px;
 }
@@ -76,6 +80,11 @@ header h1{
   font-size:56px;
   letter-spacing:-1.2px;
   text-shadow: #f5f5f5 -1px -1px 0;
+}
+
+header h1 a{
+  color:#e64f00;
+  text-decoration:none;
 }
 
 header h2{
@@ -98,6 +107,18 @@ div.section-title{
   background-color:#f5f5f5;
   border:1px solid #fff;
   padding:6px;
+}
+
+div#project-info{
+  margin:0 0;
+  background-color:#f5f5f5;
+  border:1px solid #fff;
+  padding:6px;
+  margin-bottom:12px;
+}
+
+div.project{
+  background-color:#fff;
 }
 
 div.section-title h2{
@@ -294,7 +315,7 @@ section#blog p.more a:hover{
 div#blog-container h2{
   color:#f2f2f2;
   text-shadow: #666 -1px -1px 0;
-  padding:0 12px 12px 12px;
+  padding:0 12px 12px 10px;
   font-size:32px;
 }
 
@@ -417,7 +438,7 @@ header div#search input#btn-search:hover, #new_contact input[type="submit"]:hove
 }
 
 ul#blog-posts{
-  margin:0 12px 0 12px;
+  margin:0 12px 0 10px;
 }
 
 ul#blog-posts li{
@@ -475,17 +496,16 @@ footer{
 }
 
 div#footer-container{
-  width:940px;
+  width:960px;
   margin:0 auto;
-  padding:20px;
+  margin-top:36px;
 }
 
 div#footer-container section{
   float:left;
-  width:440px;
+  width:470px;
   margin:0 20px 0 0;
   min-height:300px;
-  padding:10px;
 }
 
 div#footer-container section.last{
