--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,17 +4,14 @@
   </article>
   
   <div id="comments">
-    <h2><%= total_comments_in_words(@post.comments.length) %></h2>
-    <% if not @post.block_comments %>
+    <h2><%= total_comments_in_words(@post.comments.published.length) %></h2>
     
-    <h3 id="tit-form-comment">Deixe seu comentário</h3>
-    
-    <% unless @post.comments.empty? %>
+    <% unless @post.comments.published.empty? %>
       <ul id="list-comments">
-        <% @post.comments.each do |comment| %>
+        <% @post.comments.published.each do |comment| %>
         <li class="clearfix <% if comment.author == "Davi Ferreira" %>owner<% end %>">
 					<div class="author">
-						<p></p>
+						<p><%= gravatar_for comment %></p>
 						<p class="date"><%= raw(comment.created_at.strftime("%d/%m/%Y %l:%M").sub(' ', '<br />')) %></p>
 					</div>
 					<div class="comment">
@@ -29,28 +26,30 @@
       </ul>
     <% end %>
     
-    <% form_for(@comment, :remote => true) do |f| %>
-			<p id="info-comment">Todos os campos são obrigatórios.</p>
-			<p>
-				<label for="name">Seu nome</label>
-				<input type="text" name="name" id="name" />
-			</p>
-			<p>
-				<label for="email">Seu e-mail <small>(Seu e-mail não será divulgado - serve apenas para validação e gravatar.)</small></label>
-				<input type="text" name="email" id="email" />
-			</p>
-			<p>
-				<label for="site">Você tem site/blog?</label>
-				<input type="text" name="site" id="site" />
-			</p>
-			<p>
-				<label for="message">Digite sua mensagem <small>(<strong>Tags HTML permitidas:</strong> &lt;strong&gt; &lt;em&gt; &lt;code&gt; &lt;a&gt;)</small></label>
-				<textarea name="message" id="message" rows="4" cols="40"></textarea>
-			</p>
-			<p class="action">
-				<input type="submit" value="Enviar comentário" />
-			</p>
-		<% end %>
+    <% if not @post.block_comments %>
+    <h3 id="tit-form-comment">Deixe seu comentário</h3>
+      <% form_for(@comment, :remote => true) do |f| %>
+  			<p id="info-comment">Todos os campos são obrigatórios.</p>
+  			<p>
+  				<label for="name">Seu nome</label>
+  				<input type="text" name="name" id="name" />
+  			</p>
+  			<p>
+  				<label for="email">Seu e-mail <small>(Seu e-mail não será divulgado - serve apenas para validação e gravatar.)</small></label>
+  				<input type="text" name="email" id="email" />
+  			</p>
+  			<p>
+  				<label for="site">Você tem site/blog?</label>
+  				<input type="text" name="site" id="site" />
+  			</p>
+  			<p>
+  				<label for="message">Digite sua mensagem <small>(<strong>Tags HTML permitidas:</strong> &lt;strong&gt; &lt;em&gt; &lt;code&gt; &lt;a&gt;)</small></label>
+  				<textarea name="message" id="message" rows="4" cols="40"></textarea>
+  			</p>
+  			<p class="action">
+  				<input type="submit" value="Enviar comentário" />
+  			</p>
+  		<% end %>
     <% end %>
   </div>
 </div>
