--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -3,13 +3,13 @@ body { font-size:100%; line-height:1.25; padding-bottom:60px; background: #fff u
 h1, h2, h3 { margin-top:0; margin-bottom:0; }
 h1 { font-size:4em; padding:20px 0 20px 7px; border-bottom:1px dotted #ccc;  letter-spacing:-2px; }
 h2 { font-size:1.75em; margin-bottom:10px; letter-spacing:-1px }
-h3 { font-size:1.7em; padding:1.51785em 0; }
+h3 { font-size:1.7em; margin:12px 0 12px 0; }
 h1, h2, h3, h4{ font-weight:normal; }
 
 a{ text-decoration:none; }
-a:link { color:blue; } 
-a:visited { color:#333; } 
-a:hover { color:#ff0066; } 
+a:link { color:#ff6600; } 
+a:visited { color:#666; } 
+a:hover { color:#4ca5fe; } 
 a:active { color:#3333ff; }
 
 header, section, footer{ margin:0 auto; width:960px; display: block; padding:0 0!important; }
@@ -96,7 +96,11 @@ width:588px;
 }
 
 ul#list-comments li.owner {
-	background:#ffdfec;
+	color:#33a0da;
+}
+
+ul#list-comments li.owner p.date, ul#list-comments li.owner a{
+  color:#33a0da;
 }
 
 form#new_comment p label, form#new_comment-reply p label {
@@ -170,10 +174,60 @@ code{
   font-size:16px!important;
 }
 
+div#comments{
+  border-top:1px dotted #ccc;
+  padding:24px 0 0;
+}
+
 #comments code{
   display:block;
   white-space:pre;
   font-size:14px !important;
   margin:12px 0 12px 0;
   padding:4px;
+}
+
+div.post-abstract{
+  margin:24px 0 24px 0;
+}
+
+div.post-abstract h2 a{
+  color:#333!important;
+}
+
+div.post-abstract h2 a:hover{
+  color:#ff6600!important;
+}
+
+div.post-abstract p.time-ago{
+  color:#999;
+  font-weight:300;
+  font-size:14px;
+  margin:0 0 12px 0;
+}
+
+div.post-abstract p.actions{
+  margin:12px 0 0;
+  border-bottom:1px dashed #ccc;
+  padding:0 0 24px 0;
+}
+
+div.post-abstract span a{
+  color:#ff6600!important;
+  border:none;
+  -webkit-border-radius:3px;
+  -moz-border-radius:3px;
+  border-radius:3px;
+  cursor:pointer;
+  padding:6px;
+  font-size:14px;
+  -webkit-box-shadow:  0px 0px 4px #666;
+  -moz-box-shadow:  0px 0px 4px #666;
+  box-shadow:  0px 0px 4px #666;
+  background-color:#fff;
+}
+
+#new_comment input[type="submit"]{
+  font-size:16px!important;
+  cursor:pointer;
 }
