--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,8 @@
   <% end %>
   
   <%= stylesheet_link_tag "daviferreira.css" %>
+  <%= stylesheet_link_tag "msgtopo.css" %>
+  
   <% if blog? %>
     <%= stylesheet_link_tag "blog.css" %>
     <% if not blog_home_page? %>
